# project_microservice_interaction

./: Microservice EndPoints.postman_collection.json  README.md  docker-compose.yaml  nginx.conf  swagger.yml
.github/workflows/: docker-image.yml
book_project/: Dockerfile  ci.env  setup.cfg
book_project/book_service/application/: dataclasses.py  errors.py  interfaces.py  services.py
book_project/book_service/composites/: book_api.py
book_project/tests/: conftest.py
issue_project/: Dockerfile  ci.env  setup.cfg
issue_project/issue_service/application/: dataclasses.py  errors.py  interfaces.py  services.py
issue_project/issue_service/composites/: issue_api.py
issue_project/tests/: conftest.py
nginx/: nginx.conf
postgresql/: Dockerfile  init.sql
user_project/: Dockerfile  demo.env  docker-compose.yaml  setup.cfg
user_project/tests/: conftest.py
user_project/tests/integration/adapters/: conftest.py
user_project/tests/integration/adapters/user_api/controllers/: test_users.py
user_project/tests/unit/application/: conftest.py
user_project/tests/unit/application/services/: test_users.py
user_project/user_service/adapters/database/: __init__.py  mapping.py  repositories.py  settings.py  tables.py
user_project/user_service/adapters/message_bus/: __init__.py  consumer.py  scheme.py  settings.py
user_project/user_service/adapters/user_api/: app.py  controllers.py  settings.py
user_project/user_service/application/: dataclasses.py  errors.py  interfaces.py  services.py
user_project/user_service/composites/: user_api.py
(+21 files in other folders)
