[metadata]
name = project-user
version = 1.0.0
description = Демо проект, построенный по чистой архитектуре
author = Kudryavtsev Denis
author_email = den-kyder@mail.ru
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = ~=3.7.0

install_requires =
    psycopg2-binary~=2.9.3
    attrs~=21.2.0
    PyJWT~=2.0.0
    pydantic~=1.8.2
    sqlalchemy~=1.4.23
    alembic~=1.7.0
    gunicorn~=20.0.0
    click~=7.1.0
    python-json-logger~=2.0.2
    hupper~=1.10.3
    waitress~=2.1.1
    classic-components~=0.0.1
    classic-aspects~=0.0.1
    classic-app-layer~=0.0.1
    classic-http-api~=0.0.2
    classic-http-auth~=0.2.1
    classic-sql-storage~=0.0.1
    classic-messaging~=0.0.2
    classic-messaging-kombu~=0.0.3


[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    isort~=5.10.0
    yapf~=0.32.0
